<resources>
    <string name="app_name">Expense Analyzer</string>
    <string name="app_version">Version 0.0.1</string>
    <string name="app_logo">App Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="password_8">Password (at least 8 digits)</string>
    <string name="login">Login</string>
    <string name="verify">Verify</string>
    <string name="reset">Reset</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="logout_all">Logout form all devices</string>
    <string name="check_email">Check your email to get the token</string>
    <string name="no_account_register"><u>No Account? Register here</u></string>
    <string name="have_account"><u>Have Account? Login instead</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="know_password"><u>Know your password? Login instead</u></string>
    <string name="reset_password">Enter your email to get the token</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name (Optional)</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="token">Token</string>
    <string name="title_activity_foremost">ForemostActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="whatisup">What\'s up?</string>
    <string name="today">Today</string>
    <string name="thisWeek">This Week</string>
    <string name="thisMonth">This Month</string>
    <string name="thisYear">This Year</string>
    <string name="category">Category</string>
    <string name="income_categories">Income Categories</string>
    <string name="expense_categories">Expense Categories</string>
    <string name="explore">Explore</string>
    <string name="about">About</string>
    <string name="app_description">
        Thanks for choosing this app. We appreciate your comments, so please send us bug reports,
        feature requests.
    </string>
    <string name="contact_number">
        Thanks for choosing this app. We appreciate your comments, so please send us bug reports,
        feature requests.
    </string>
    <string name="contact">Contact</string>
    <string name="my_email">elwyncrestha@gmail.com</string>
    <string name="my_contact_number">+9779860687788</string>
    <string name="my_location">Dillibazar, Kathmandu</string>
    <string name="zero">0</string>
    <string name="category_name">Category Name</string>
    <string name="category_type">Category Type</string>
    <string name="your_categories">Your Categories</string>
    <string name="add_category">Add Category</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_payment_methods">Total Payment Methods</string>
    <string name="your_payment_methods">Your Payment Methods</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="payment_method_name">Payment Method Name</string>
    <string name="status">Status</string>
    <string name="total_statuses">Total Statuses</string>
    <string name="your_statuses">Your Statuses</string>
    <string name="add_expense_status">Add Status</string>
    <string name="status_name">Status Name</string>
    <string name="transaction">Transaction</string>
    <string name="income_transactions">Income Transactions</string>
    <string name="expense_transactions">Expense Transactions</string>
    <string name="your_transactions">Your Transactions</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="payee_payer">Payee/Payer</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="amount">Amount</string>
    <string name="transaction_time">Transaction Time</string>
    <string name="description">Description</string>
</resources>
