<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorWhite"
    tools:context=".ui.activity.auth.NewPasswordActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo"
        android:layout_marginHorizontal="60dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_email"
        style="@style/StyleLoginFormInput"/>

    <EditText
        android:id="@+id/etResetToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/token"
        style="@style/StyleLoginFormInput"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etResetNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        style="@style/StyleLoginFormInput"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        style="@style/StyleLoginFormInput"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"/>

</LinearLayout>