<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorWhite"
    tools:context=".ui.activity.auth.ResetPasswordActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo"
        android:layout_marginHorizontal="60dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        style="@style/StyleLoginFormInput"/>

    <EditText
        android:id="@+id/etResetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/StyleLoginFormInput"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/btnResetPasswordVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        style="@style/StyleLoginFormInput"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/tvKnowPasswordLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/know_password"
        style="@style/StyleTextLink"
        android:gravity="center"/>

</LinearLayout>