<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorWhite"
    tools:context=".ui.activity.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo"
        android:layout_marginHorizontal="60dp"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        style="@style/StyleRegisterFormInput"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/btnLogoutAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_all"
        style="@style/StyleRegisterFormInput"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"/>

</LinearLayout>